@@ -546,6 +546,12 @@ c(test.num.copy, round(opt.C))[i], prior.K, mapping.bias.ok, seg.id, min.variant
         seg.id = subjectHits(ov), seg.length = seg.adjusted$size[subjectHits(ov)], 
         focal = focal[subjectHits(ov)]
         )
+    # some targets have multipe genes assigned?
+    if (sum(grepl(",", dt$Gene))) {
+        dt <- dt[, list(Gene = unlist(strsplit(as.character(Gene), ",", fixed=TRUE))), 
+            by = .(seqnames, start, end, C, seg.mean, seg.id, seg.length, LR, focal)]
+    }
+
     gene.calls <- data.frame(dt[, list(chr = seqnames[1], start = min(start), 
         end = max(end), C = as.double(median(C)), seg.mean = median(seg.mean),
         seg.id = seg.id[which.min(seg.length)], 
